[package]
name = "cmpa"
version = "0.1.0"
edition = "2021"

[features]
default = ["enable_arch_math_asm", "zeroize"]
enable_arch_math_asm = []
zeroize = ["dep:zeroize"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zeroize = { version = "1.8.1", optional = true, default-features = false }
