[package]
name = "cmpa"
version = "0.1.0"
edition = "2021"

license = "Apache-2.0"
description = "Multiprecision arithmetic primitives commonly needed for asymmetric cryptography"
homepage = "https://github.com/nicstange/cmpa-rs"
repository = "https://github.com/nicstange/cmpa-rs"
readme = "README.md"

[features]
default = ["enable_arch_math_asm", "zeroize"]
enable_arch_math_asm = []
zeroize = ["dep:zeroize"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zeroize = { version = "1.8.1", optional = true, default-features = false }
